--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,5 @@
-C:\Users\User\Desktop\1.2. Site For Import\img\NeuroStartUp.png_backup
-C:\Users\User\Desktop\1.2. Site For Import\tmp
-C:\Users\User\Desktop\index.html_old
-C:\Users\User\Desktop\.DS_Store
-C:\Users\User\Desktop\1.2. Site For Import\img\Thumbs.db
-C:\Users\User\Desktop\1.2. Site For Import\img\.DS_Store
 
+img/.DS_Store
+img/Thumbs.db
+img/NeuroStartUp.png_backup
+index.html_old
